Anpasssung der Candy-Graph-Größe